<resources>
    <string name="app_name">Smart Wallet</string>
    <string name="add_new_transaction">Add new transaction</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_setting">Setting</string>

    <string name="transaction_item_text_view_price">Price</string>
    <string name="transaction_item_text_view_description">Description</string>
    <string name="transaction_item_text_vew_date">09.08.2016</string>
    <string name="transaction_item_text_view_time">10:10 a.m.</string>

    <string name="transaction_item_text_view_date_text">Date:</string>
    <string name="transaction_item_text_view_time_text">Time:</string>
    <string name="transaction_item_text_view_description_text">Description:</string>
    <string name="transaction_item_text_view_price_text">Price:</string>

    <string name="time_history_row">Time</string>
    <string name="date_history_row">Date</string>
    <string name="bill_history_row">Bill</string>
    <string name="total_history_row">Total</string>
    <string name="transaction_history_row">Transaction</string>
    <string name="description_history_row">Description</string>

    <string name="alert_dialog_detail_history">16.08.2016</string>
    <string name="alert_dialog_detail_history_price">$ 116</string>
    <string name="intro_first_description">Tired of losing your money\n and never know where and how much? Forget about this and use Smart Wallet\n to control all your costs</string>
    <string name="intro_second_description">Tired of losing your money\n and never know where and how much? Forget about this and use Smart Wallet\n to control all your costs</string>
    <string name="intro_third_description">Tired of losing your money\n and never know where and how much? Forget about this and use Smart Wallet\n to control all your costs</string>
    <string name="title_intro_first">Control your money</string>
    <string name="title_intro_second">Control your money</string>
    <string name="title_intro_third">Control your money</string>

    <string name="title_statistic_day">Days</string>
    <string name="alert_delete_transaction">Delete Transaction</string>
    <string name="matter_removal_transaction">Do you want to delete this transaction?</string>
    <string name="cancel_dialog_delete">Cancel</string>
    <string name="ok_dialog_delete">OK</string>
    <string name="actions_dialog_edit">Actions Transaction</string>
    <string name="action_over_transactions_dialog_edit">Choose action over transactions?</string>
    <string name="edit_alert">Edit</string>
    <string name="delete_alert">Delete</string>
    <string name="clock_edit_dialog">Clock</string>
    <string name="start_date_budget">Start date</string>
    <string name="end_date_budget">End date</string>
    <string name="category_budget">Category</string>
    <string name="total_budget">Total Budget</string>
    <string name="left_budget">Left</string>
    <string name="date_budget">02/04/2015</string>
    <string name="date_budget_second">02/05/2015</string>
    <string name="weekly_budget">Weekly</string>
    <string name="cost_budget">500000</string>
    <string name="budget_left">256600</string>
    <string name="back_budget">Back</string>
    <string name="reset_budget">Reset</string>
    <string name="add_budget">Add Budget</string>
    <string name="set_budget">Set Budget</string>
    <string name="save_budget">Save</string>
    <string name="total_budget_history">Total</string>
    <string name="daily_statistic">Daily</string>
    <string name="monthly_statistic">Monthly</string>
    <string name="yearly_statistic">Yearly</string>
    <string name="dollars">＄</string>
    <string name="id">ID</string>
    <string name="budget_left_provider">Budget left</string>
    <string name="start">Start</string>
    <string name="end_provider">End</string>
    <string name="budget">Rp. 500.000</string>
    <string name="name_widget">Smart Wallet Widget</string>
    <string name="actions_transaction">Actions Transaction</string>


    <string-array name="category_array">
        <item>Choose your category:</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="statistic_array">
        <item>Choose your filter:</item>
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="budget_array">
        <item>Choose your filter:</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Both</item>
    </string-array>


</resources>
