<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alert_dialog_detail_history_date_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/alert_dialog_detail_history"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/alert_dialog_detail_history_price_text"
            android:layout_below="@id/alert_dialog_detail_history_date_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/alert_dialog_detail_history_price"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textSize="28sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_weight="2.2"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_item_text_view_date_text"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/alert_dialog_detail_history_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/alert_dialog_detail_history"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_weight="2.2"
        android:layout_marginTop="12dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_item_text_view_time_text"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/alert_dialog_detail_history_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/transaction_item_text_view_time"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_weight="2.2"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_item_text_view_description_text"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/alert_dialog_detail_history_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="Description"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:fontFeatureSettings="r"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:id="@+id/alert_dialog_history_detail_cancel_button"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@color/colorItems"
            android:text="Cancel" />

        <Button
            android:layout_width="0dp"
            android:id="@+id/alert_dialog_history_detail_ok_button"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@color/colorAccent"
            android:text="Ok" />

    </LinearLayout>


</LinearLayout>