<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorItems"
        android:orientation="vertical"
        android:weightSum="10"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.175"
            android:background="@drawable/item_selector">

            <TextView
                android:id="@+id/dollar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:text="\uff04"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/transaction_price_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@id/dollar_text"
                android:layout_toRightOf="@+id/dollar_text"
                android:background="@android:color/transparent"
                android:ellipsize="middle"
                android:gravity="center_vertical"
                android:hint="@string/transaction_item_text_view_price"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="24sp" />

        </RelativeLayout>

        <include layout="@layout/divider_item" />

        <RelativeLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.175"
            android:background="@color/colorItems">

            <EditText
                android:id="@+id/transaction_description_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32dp"
                android:background="@android:color/transparent"
                android:ellipsize="middle"
                android:gravity="center_vertical"
                android:hint="@string/transaction_item_text_view_description"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="24sp" />

        </RelativeLayout>

        <include layout="@layout/divider_item" />

        <RelativeLayout
            android:id="@+id/date_picker_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.175"
            android:background="@color/colorItems">

            <ImageView
                android:id="@+id/calendar_image_view"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/transaction_date_picker_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:layout_toEndOf="@+id/calendar_image_view"
                android:layout_toRightOf="@+id/calendar_image_view"
                android:gravity="center_vertical"
                android:text="@string/transaction_item_text_vew_date"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <include layout="@layout/divider_item" />

        <RelativeLayout
            android:id="@+id/time_picker_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.175"
            android:background="@color/colorItems">

            <ImageView
                android:id="@+id/clock_image_view"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/transaction_time_picker_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:layout_toEndOf="@+id/clock_image_view"
                android:layout_toRightOf="@+id/clock_image_view"
                android:gravity="center_vertical"
                android:text="@string/transaction_item_text_view_time"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/add_new_transaction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1.3"
            android:background="@color/colorButtonTransactions"
            android:text="@string/add_new_transaction"
            android:textSize="16sp" />

    </LinearLayout>
</layout>